--- a/AdminPanel/AdminPanel.ui
+++ b/AdminPanel/AdminPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>410</width>
-    <height>384</height>
+    <width>675</width>
+    <height>380</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -21,163 +21,226 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog#AdminPanel {
-        background-color: #fef6f0;
-        border: 1px solid black;
+         background-color:#1B0633;
+border:8px solid #B89AD8;
         border-radius: 10%;
 }</string>
   </property>
   <property name="modal">
    <bool>false</bool>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,0,0">
-   <property name="spacing">
-    <number>1</number>
+  <widget class="QPushButton" name="studentButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>30</y>
+     <width>250</width>
+     <height>40</height>
+    </rect>
    </property>
-   <property name="leftMargin">
-    <number>82</number>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>40</height>
+    </size>
    </property>
-   <property name="topMargin">
-    <number>4</number>
-   </property>
-   <property name="bottomMargin">
-    <number>12</number>
-   </property>
-   <item>
-    <widget class="QPushButton" name="studentButton">
-     <property name="maximumSize">
-      <size>
-       <width>240</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton#studentButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   <property name="styleSheet">
+    <string notr="true">QPushButton#studentButton {
+border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
+
 }
 
 QPushButton#studentButton:hover {
-    background-color: #ee5253;
+   background-color: #69166f;
 }
 
 </string>
-     </property>
-     <property name="text">
-      <string>Manage Students</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="teacherButton">
-     <property name="maximumSize">
-      <size>
-       <width>240</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton#teacherButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   </property>
+   <property name="text">
+    <string>Manage Students</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="teacherButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>100</y>
+     <width>250</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#teacherButton {
+   border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#teacherButton:hover {
-    background-color: #ee5253;
+    background-color: #69166f;
 }
 
 </string>
-     </property>
-     <property name="text">
-      <string>Manage Teachers</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="attendanceButton">
-     <property name="maximumSize">
-      <size>
-       <width>240</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton#attendanceButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   </property>
+   <property name="text">
+    <string>Manage Teachers</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="attendanceButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>170</y>
+     <width>250</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#attendanceButton {
+   border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#attendanceButton:hover {
-    background-color: #ee5253;
+    background-color: #69166f;
 }
 
 </string>
-     </property>
-     <property name="text">
-      <string>Manage Attendance</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="examButton">
-     <property name="maximumSize">
-      <size>
-       <width>240</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton#examButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   </property>
+   <property name="text">
+    <string>Manage Attendance</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="examButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>240</y>
+     <width>250</width>
+     <height>40</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>40</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#examButton {
+   border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#examButton:hover {
-    background-color: #ee5253;
+   background-color: #69166f;
 }
 
 </string>
-     </property>
-     <property name="text">
-      <string>Manage Exams</string>
-     </property>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="classScheduleButton">
-     <property name="maximumSize">
-      <size>
-       <width>240</width>
-       <height>40</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">QPushButton#classScheduleButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   </property>
+   <property name="text">
+    <string>Manage Exams</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="classScheduleButton">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>310</y>
+     <width>250</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="maximumSize">
+    <size>
+     <width>250</width>
+     <height>42</height>
+    </size>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton#classScheduleButton {
+   border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#classScheduleButton:hover {
-    background-color: #ee5253;
+    background-color: #69166f;
 }
 
 </string>
-     </property>
-     <property name="text">
-      <string>Manage Class Schedules</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+   </property>
+   <property name="text">
+    <string>Manage Class Schedules</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>0</y>
+     <width>511</width>
+     <height>381</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel#label{
+
+}</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>C:\Users\Sarim Khan\OneDrive\Desktop\SchoolManagementSystem\Resources/admin page.jpeg</pixmap>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
