--- a/StudentPanel/StudentInfo.ui
+++ b/StudentPanel/StudentInfo.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>452</width>
-    <height>318</height>
+    <height>349</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,18 +15,18 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog#StudentInfo {
-        background-color: #fef6f0   ;
-        border: 1px solid black;
+       background-color:#1B0633;
+border:5px solid #B89AD8;
         border-radius: 10%;
 }</string>
   </property>
   <widget class="QLabel" name="titleLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>20</y>
-     <width>431</width>
-     <height>26</height>
+     <x>120</x>
+     <y>10</y>
+     <width>211</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
@@ -37,12 +37,16 @@
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#titleLabel {
-        font-size: 25px;
-color: #2c3e50 ;
+    background-color: #3E0066;
+  color: #E6CCE7;
+  border: 2px solid #E7A9A9;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
 }</string>
    </property>
    <property name="text">
-    <string>Student Profile</string>
+    <string>STUDENT PROFILE</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignmentFlag::AlignCenter</set>
@@ -52,23 +56,28 @@ color: #2c3e50 ;
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>260</y>
+     <y>290</y>
      <width>411</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#btnClose {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
+    border: 1.5px solid #B89FD0;
     border-radius: 10px;
     padding: 6px;
     font-size: 16px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(95, 2, 95),
+                            stop:1 rgb(216, 181, 221));
+color:#e4c9f2;
+font-weight:700;
 }
 
 /* Hover effect */
 QPushButton#btnClose:hover {
-    background-color: #ee5253;
+
+   background-color: #69166f;
 }
 
 </string>
@@ -86,19 +95,21 @@ QPushButton#btnClose:hover {
   <widget class="QLineEdit" name="lineEditClass">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>160</y>
-     <width>321</width>
+     <x>120</x>
+     <y>180</y>
+     <width>311</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit#lineEditClass {
-    color: black;;
-    border: 1.5px solid black;;
+       color:#1B0633;
+    border: 3px solid #8d4d95;
     border-radius: 10px;
-        font-size: 16px;
-        padding: 0px 8px 0px 8px;
+        font-size: 17px;
+font-weight: 570;
+padding: 0px 8px 0px 8px;
+background-color: #E8D4F4 ;
 }
 </string>
    </property>
@@ -109,19 +120,21 @@ QPushButton#btnClose:hover {
   <widget class="QLineEdit" name="lineEditName">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>110</y>
-     <width>321</width>
+     <x>120</x>
+     <y>130</y>
+     <width>311</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit#lineEditName {
-    color: black;;
-    border: 1.5px solid black;;
+        color:#1B0633;
+    border: 3px solid #8d4d95;
     border-radius: 10px;
-        font-size: 16px;
-        padding: 0px 8px 0px 8px;
+        font-size: 17px;
+font-weight: 570;
+padding: 0px 8px 0px 8px;
+background-color: #E8D4F4 ;
 }
 </string>
    </property>
@@ -133,37 +146,40 @@ QPushButton#btnClose:hover {
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>60</y>
-     <width>81</width>
+     <y>80</y>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#label_id {
-        font-size: 16px;
-        color: #2c3e50 ;
+ font-size: 19px;
+        color: #E8D4F4 ;
+font-weight:700;
 }</string>
    </property>
    <property name="text">
-    <string>Student ID:</string>
+    <string>ID:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEditId">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>60</y>
-     <width>321</width>
+     <x>120</x>
+     <y>80</y>
+     <width>311</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit#lineEditId {
-    color: black;;
-    border: 1.5px solid black;;
+     color:#1B0633;
+    border: 3px solid #8d4d95;
     border-radius: 10px;
-        font-size: 16px;
-        padding: 0px 8px 0px 8px;
+        font-size: 17px;
+font-weight: 570;
+padding: 0px 8px 0px 8px;
+background-color: #E8D4F4 ;
 }
 </string>
    </property>
@@ -175,75 +191,80 @@ QPushButton#btnClose:hover {
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>160</y>
+     <y>180</y>
      <width>61</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#label_class {
-        font-size: 16px;
-        color: #2c3e50 ;
+        font-size: 19px;
+        color: #E8D4F4 ;
+font-weight:700;
 }</string>
    </property>
    <property name="text">
-    <string>Class</string>
+    <string>Class:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_name">
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>100</y>
+     <y>120</y>
      <width>71</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#label_name {
-        font-size: 16px;
-        color: #2c3e50 ;
+        font-size: 19px;
+        color: #E8D4F4 ;
+font-weight:700;
 }</string>
    </property>
    <property name="text">
-    <string>Name</string>
+    <string>Name:</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_password">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>200</y>
-     <width>91</width>
+     <x>10</x>
+     <y>220</y>
+     <width>101</width>
      <height>51</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLabel#label_password {
-        font-size: 16px;
-        color: #2c3e50 ;
+         font-size: 19px;
+        color: #E8D4F4 ;
+font-weight:700;
 }</string>
    </property>
    <property name="text">
-    <string>Password</string>
+    <string> Password:</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEditPassword">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>210</y>
-     <width>321</width>
+     <x>120</x>
+     <y>230</y>
+     <width>311</width>
      <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QLineEdit#lineEditPassword {
-    color: black;;
-    border: 1.5px solid black;;
+      color:#1B0633;
+    border: 3px solid #8d4d95;
     border-radius: 10px;
-        font-size: 16px;
-        padding: 0px 8px 0px 8px;
+        font-size: 17px;
+font-weight: 570;
+padding: 0px 8px 0px 8px;
+background-color: #E8D4F4 ;
 }
 </string>
    </property>
