--- a/StudentPanel/StudentPanel.ui
+++ b/StudentPanel/StudentPanel.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>350</height>
+    <width>775</width>
+    <height>401</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,30 +15,34 @@
   </property>
   <property name="styleSheet">
    <string notr="true">QDialog#StudentPanel {
-        background-color: #fef6f0;
-        border: 1px solid black;
+             background-color:#1B0633;
+border:9.5px solid #B89AD8;
         border-radius: 10%;
 }</string>
   </property>
   <widget class="QPushButton" name="personalInfoButton">
    <property name="geometry">
     <rect>
-     <x>9</x>
+     <x>40</x>
      <y>40</y>
-     <width>381</width>
+     <width>331</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#personalInfoButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+    border: 1.5px solid #B89FD0;
+border-radius: 10px;
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#personalInfoButton:hover {
-    background-color: #ee5253;
+    background-color: #69166f;
 }
 
 </string>
@@ -50,22 +54,27 @@ QPushButton#personalInfoButton:hover {
   <widget class="QPushButton" name="attendanceButton">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>101</y>
-     <width>381</width>
+     <x>40</x>
+     <y>110</y>
+     <width>331</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#attendanceButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+    border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#attendanceButton:hover {
-    background-color: #ee5253;
+background-color: #69166f;
 }
 
 </string>
@@ -77,22 +86,27 @@ QPushButton#attendanceButton:hover {
   <widget class="QPushButton" name="examButton">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>162</y>
-     <width>381</width>
+     <x>40</x>
+     <y>180</y>
+     <width>331</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#examButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+   border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#examButton:hover {
-    background-color: #ee5253;
+    background-color: #69166f;
 }
 
 </string>
@@ -104,22 +118,27 @@ QPushButton#examButton:hover {
   <widget class="QPushButton" name="scheduleButton">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>223</y>
-     <width>381</width>
+     <x>40</x>
+     <y>250</y>
+     <width>331</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#scheduleButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+  border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#scheduleButton:hover {
-    background-color: #ee5253;
+ background-color: #69166f;
 }
 
 </string>
@@ -131,28 +150,49 @@ QPushButton#scheduleButton:hover {
   <widget class="QPushButton" name="resultButton">
    <property name="geometry">
     <rect>
-     <x>9</x>
-     <y>284</y>
-     <width>381</width>
+     <x>40</x>
+     <y>320</y>
+     <width>331</width>
      <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#resultButton {
-    background-color: #ff6b6b;
-    border: 1.5px solid black;
-    border-radius: 10px;
-    font-size: 16px;
+    border: 1.5px solid #B89FD0;
+border-radius: 10px;
+
+font-size: 20px;
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+                            stop:0 rgb(60, 0, 60),     /* darker start */
+                            stop:1 rgb(140, 110, 150)); /* darker end */
+color: #e4c9f2;
+font-weight: 1000;
 }
 
 QPushButton#resultButton:hover {
-    background-color: #ee5253;
+   background-color: #69166f;
 }
 
 </string>
    </property>
    <property name="text">
     <string>My Results</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="studentPanelpic">
+   <property name="geometry">
+    <rect>
+     <x>400</x>
+     <y>10</y>
+     <width>371</width>
+     <height>381</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>C:\Users\Sarim Khan\OneDrive\Desktop\SchoolManagementSystem\Resources/student page.jpeg</pixmap>
    </property>
   </widget>
  </widget>
